--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "installCommand": "npm install --legacy-peer-deps"
+  "installCommand": "npm install --legacy-peer-deps && npm run postinstall",
+  "buildCommand": "npm run build"
 }
 
