--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@studio-freight/lenis": "^1.0.42",
     "@zoom/rivet": "^0.3.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
@@ -38,6 +39,7 @@
     "framer-motion": "^12.23.24",
     "googleapis": "^162.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.545.0",
     "mongodb": "^6.20.0",
     "next": "15.5.4",
